Using flex to align dropdown items & font size fix
Items in the dropdowns now use flex for easier alignment of icons and
text labels, especially for the inputs of the table dimensions.

--- a/app/styles/deprecated/_c-input.scss
+++ b/app/styles/deprecated/_c-input.scss
@@ -103,6 +103,6 @@ $say-input-font-size: $au-h6 !default;
 }
 
 .say-input--small {
-  font-size: 14px; /* TODO: use variable */
+  font-size: $say-smaller-font-size;
   padding: 0 $au-unit-tiny;
 }
